Fix: UI Element jumps after resize when dragged

--- a/VocaDbWeb/wwwroot/Content/Styles/Overrides.less
+++ b/VocaDbWeb/wwwroot/Content/Styles/Overrides.less
@@ -38,7 +38,7 @@ body .ui-widget {
 }
 
 .ui-widget.ui-draggable {
-	position: relative;
+	position: fixed !important;
 }
 
 /* jQx */
